--- a/match_recipe_ingredients/requirements.txt
+++ b/match_recipe_ingredients/requirements.txt
@@ -40,7 +40,7 @@ tensorboard-plugin-wit==1.7.0
 tensorflow==2.3.1
 tensorflow-datasets==4.1.0
 tensorflow-estimator==2.3.0
-tensorflow-metadata==0.25.0
+tensorflow-metadata
 termcolor==1.1.0
 threadpoolctl==2.1.0
 tqdm==4.51.0
