start ignoring model weights in match-recipe-ingredients (too large)

--- a/match_recipe_ingredients/.gitignore
+++ b/match_recipe_ingredients/.gitignore
@@ -2,3 +2,4 @@
 fullIngredientPhraseTripletExamples_complete*.json
 ingredientNameOnlyTripletExamples_complete*.json
 .DS_Store
+model_weights.data*
