also start ignoring some tensorboard logs, as they can be very big as well

--- a/match_recipe_ingredients/.gitignore
+++ b/match_recipe_ingredients/.gitignore
@@ -3,3 +3,4 @@ fullIngredientPhraseTripletExamples_complete*.json
 ingredientNameOnlyTripletExamples_complete*.json
 .DS_Store
 model_weights.data*
+events.out.tfevents.*.v2
